# magicdub

./: .env.example  .gitignore  LICENSE  README.md  __main__.py  magicdub.py  pyproject.toml  setup.py
.cursor/rules/: env-sync.mdc
cli/: __main__.py  main.py  provider.py
config/: settings.py
constants/: filenames.py
media/: audio.py  audio_format.py  ffmpeg.py  mixing.py  resources.py
pipeline/: align_segment_duration.py  compose_output_video.py  context.py  create_instrumental_track.py  export_result.py  extract_source_audio.py  initialize_task.py  prepare_source_video.py  runner.py  separate_vocals.py  split_vocal_segments.py  synthesize_segments.py  transcribe_speech.py  translate_transcript.py
providers/: _dependencies.py  _installer.py  _loader.py  _metadata.py
providers/asr/: __init__.py  base.py  registry.py
providers/asr/bailian_fun_asr/: .env.example  README.md  __init__.py  provider.py  provider.toml
providers/asr/fal_wizper/: .env.example  README.md  __init__.py  provider.py  provider.toml
providers/asset_store/: __init__.py  base.py  registry.py
providers/asset_store/fal_cdn/: README.md  __init__.py  provider.py  provider.toml
providers/llm/: __init__.py  _openrouter_attribution.py  base.py  registry.py
providers/llm/deepseek/: .env.example  README.md  (+3 more)
providers/tts/: __init__.py  base.py  registry.py
providers/vocal_separation/: __init__.py  base.py  registry.py
schemas/: __init__.py  task.py
scripts/: magicdub  magicdub_run.py
storage/: task_state_store.py  workspace_cleanup.py
utils/: export_path.py  logging.py  time.py
(+35 files in other folders)
